<resources>
    <string name="app_name">Calendar</string>
    <string name="action_about">About</string>
    <string name="year">Year:</string>
    <string name="go">Go</string>
    <string name="title_activity_text">Calendar</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">This is a simple app to generate calendar of any year given as input.
    </string>
    <string name="calendar">Calendar</string>
    <string name="calendar_vector">calendar_vector</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="june">June</string>
    <string name="november">November</string>
    <string name="december">December</string>
</resources>
