<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_main_margin"
    android:paddingLeft="@dimen/activity_main_margin"
    android:paddingRight="@dimen/activity_main_margin"
    android:paddingTop="@dimen/activity_main_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.calendar.my.calendar.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/year"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_toEndOf="@+id/textView"
        android:layout_toLeftOf="@+id/button"
        android:layout_toRightOf="@+id/textView"
        android:layout_toStartOf="@+id/button"
        android:inputType="number"
        android:nextFocusForward="@id/button"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:onClick="start"
        android:text="@string/go"
        android:nextFocusForward="@id/editText"/>

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textClock"
        android:format12Hour="hh:mm:ss a"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:layout_marginTop="25dp"
        android:textColor="#DDFFFFFF"
        android:textStyle="bold"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textClock"
        android:layout_centerHorizontal="true"
        android:textColor="#DDDDDDDD"
        android:textSize="25sp"
        android:visibility="invisible"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/mainTable">

            <TextView
                android:id="@+id/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/currentMonth"
                android:text="MONTH"
                android:textAlignment="center"
                android:textColor="@color/monthColor"
                android:textSize="40sp" />

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/WeekNames"
                    android:textStyle="normal"
                    android:id="@+id/sun"
                    android:text="@string/sun"/>
                <TextView
                    style="@style/WeekNames"
                    android:textStyle="normal"
                    android:id="@+id/mon"
                    android:text="@string/mon"/>
                <TextView
                    style="@style/WeekNames"
                    android:textStyle="normal"
                    android:id="@+id/tue"
                    android:text="@string/tue"/>
                <TextView
                    style="@style/WeekNames"
                    android:textStyle="normal"
                    android:id="@+id/wed"
                    android:text="@string/wed"/>
                <TextView
                    style="@style/WeekNames"
                    android:textStyle="normal"
                    android:id="@+id/thu"
                    android:text="@string/thu"/>
                <TextView
                    style="@style/WeekNames"
                    android:textStyle="normal"
                    android:id="@+id/fri"
                    android:text="@string/fri"/>
                <TextView
                    style="@style/WeekNames"
                    android:textStyle="normal"
                    android:id="@+id/sat"
                    android:text="@string/sat"/>

            </TableRow>


        </TableLayout>


    </HorizontalScrollView>

</RelativeLayout>
